# digger

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  database.json.example  docker-compose.yml  pom.xml
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
config/: application-embedded.properties  application-server.properties  application-test.properties  application.properties
docs/: git.adoc  index.adoc  index.html  index.rst
docs/documentation/: index.html  licenses.html  plugin-management.html  project-reports.html  scm.html  summary.html  team.html
docs/documentation/apidocs/: allclasses.html  allpackages-index.html  element-list  index-all.html  index.html  overview-tree.html  package-search-index.js
docs/documentation/testapidocs/: allclasses-index.html  allpackages-index.html  constant-values.html  index.html  member-search-index.js  overview-tree.html
docs/project/: ci-management.html  dependencies.html  dependency-info.html  dependency-management.html  index.html  issue-management.html  licenses.html  plugin-management.html  plugins.html  project-info.html  project-reports.html  scm.html  summary.html  team.html
docs/project/apidocs/: allclasses-frame.html  allclasses-index.html  allclasses-noframe.html  constant-values.html  help-doc.html  (+9 more)
java/: digger-service.xml  docker-compose.yml
java/config/: application.properties
java/docs/: index.adoc
java/os-service/: digger-windows-service.xml
src/: main.rs
(+427 files in other folders)
