[package]
name = "digger"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.149"

serde = { version = "1.0.228", features = ["derive"] }
sqlx =  { version = "0.8.6", features = ["runtime-tokio", "macros", "postgres", "chrono"], default-features = false }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"]}